[projectfirma/#149] bug: wizard icon formatting is messed up clackamas is still using default theme so going ahead and updating that style sheet added h2.collapsed and h2.expanded to fix ProjectUpdate/PerformanceMeasures header text "What if my project has no accomplishments to report?"
git-svn-id: https://svn.sitkatech.com/svn/sitkatech/trunk/ProjectFirma@137163 0729f40c-f363-46e8-bae2-8dcc587728a9

--- a/Source/ProjectFirma.Web/Content/Bootstrap/firma/default.theme.less
+++ b/Source/ProjectFirma.Web/Content/Bootstrap/firma/default.theme.less
@@ -829,6 +829,7 @@ ul.filmStrip li a div.caption {
     text-align: left;
     margin: 0;
     padding: 0;
+    background-color: rgb(230, 230, 230);
 }
 
 
@@ -842,8 +843,6 @@ ul.filmStrip li a div.caption {
 #tab-container ol li.selectable:hover, #tab-container ul li.selectable:hover
 {
     background-color: #bbb;
-    border-top-left-radius: 6px;
-    border-bottom-left-radius: 6px;
 }
 
 #tab-container ul li .statusIcon, #tab-container ol li .statusIcon
@@ -863,8 +862,6 @@ ul.filmStrip li a div.caption {
 {
     border-right: none;
     background-color: #fff;
-    border-top-left-radius: 6px;
-    border-bottom-left-radius: 6px;
 }
 
 #projectWizardContent .glyphicon-flag {
@@ -936,3 +933,18 @@ input:-webkit-autofill, textarea:-webkit-autofill, select:-webkit-autofill {
         background-color: #2B6991;
     }
 
+h2.expanded {
+    padding: 0 0 10px 25px;
+    background: url("/Content/img/expanded.png") no-repeat scroll 0 0 transparent;
+    color: #007CB9;
+    cursor: pointer;
+    font-size: 13px;
+}
+
+h2.collapsed {
+    padding: 0 0 10px 25px;
+    background: url("/Content/img/collapsed.png") no-repeat scroll 0 0 transparent;
+    color: #007CB9;
+    cursor: pointer;
+    font-size: 13px;
+}
